# EasyProfileFrame

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  package.xml  pyproject.toml  setup.py
freecad/easy_profile_frame/: __init__.py  init_gui.py  typing.py
freecad/easy_profile_frame/commands/: ProfileFrameObject.py  create_profiles.py  generate_bom.py  utils.py
freecad/easy_profile_frame/resources/PartLib/: AluminumProfiles.FCStd  AluminumProfiles.FCStd1
freecad/easy_profile_frame/resources/translations/: README.md  easy_profile_frame_es-ES.ts  update_translation.sh
freecad/easy_profile_frame/resources/ui/: CreateProfilesBySketchPanel.py  CreateProfilesBySketchPanel.ui  compile_ui.sh
